# ticker

./: .ticker.yml  Cargo.toml  README.md
src/: main.rs
