[package]
name = "ticker"
version = "0.1.0"
authors = ["Josh Finnie <josh@jfin.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
prettytable-rs = "^0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "^0.8"
tokio = { version = "1", features = ["full"] }
